--- a/index.html
+++ b/index.html
@@ -90,14 +90,15 @@
         let isFaceDetected = false;
         let detectionInterval;
 
-        // Muat model pengenalan wajah dari folder 'models' lokal
+        // Muat model pengenalan wajah dari folder 'models' lokal dengan URL absolut
+        const baseUrl = 'https://koaladumb.github.io/absen-nonasn/'; // Ganti dengan URL repositori Anda
         Promise.all([
-            faceapi.nets.tinyFaceDetector.loadFromUri('./models'),
-            faceapi.nets.faceLandmark68Net.loadFromUri('./models'),
-            faceapi.nets.faceRecognitionNet.loadFromUri('./models')
+            faceapi.nets.tinyFaceDetector.loadFromUri(baseUrl + 'models'),
+            faceapi.nets.faceLandmark68Net.loadFromUri(baseUrl + 'models'),
+            faceapi.nets.faceRecognitionNet.loadFromUri(baseUrl + 'models')
         ]).then(startVideo).catch(err => {
             console.error("Kesalahan saat memuat model: ", err);
-            statusMessage.textContent = 'Gagal memuat model pengenalan wajah.';
+            statusMessage.textContent = 'Gagal memuat model pengenalan wajah. Pastikan folder "models" ada.';
             loadingIndicator.style.display = 'none';
         });
 
@@ -113,7 +114,8 @@
                 })
                 .catch(err => {
                     console.error("Kesalahan saat mengakses kamera: ", err);
-                    statusMessage.textContent = 'Gagal mengakses kamera.';
+                    statusMessage.textContent = 'Gagal mengakses kamera. Mohon berikan izin.';
+                    loadingIndicator.style.display = 'none';
                 });
         }
 
