--- a/rekap_absensi.html
+++ b/rekap_absensi.html
@@ -71,6 +71,20 @@
         .file-upload-input {
             display: none;
         }
+        /* Style for scrollable table container */
+        .table-container {
+            max-height: 400px; /* Adjust height as needed */
+            overflow-y: auto;
+            border: 1px solid #30363d;
+            border-radius: 0.5rem;
+        }
+        /* Ensure table header is sticky */
+        .table-container thead {
+            position: sticky;
+            top: 0;
+            background-color: #161b22;
+            z-index: 10;
+        }
     </style>
 </head>
 <body class="p-4 md:p-8">
@@ -139,7 +153,7 @@
                         <h2 class="text-xl font-semibold text-white">Tabel Rekapitulasi Kehadiran</h2>
                         <button id="exportXlsxBtn" class="btn-primary font-semibold py-2 px-4 rounded-md">Ekspor ke XLSX</button>
                     </div>
-                    <div class="overflow-x-auto">
+                    <div class="overflow-x-auto table-container">
                         <table class="w-full text-left text-sm">
                             <thead class="border-b border-gray-600">
                                 <tr>
