--- a/rekap_absensi.html
+++ b/rekap_absensi.html
@@ -73,7 +73,7 @@
                 startRealtimeListeners();
             } catch (error) {
                 console.error("Firebase Initialization Error:", error);
-                showAlert('Kesalahan', `Gagal menginisialisasi Firebase. Silakan periksa koneksi internet Anda atau hubungi dukungan. Detail: Firebase: error (${error.code})`);
+                showAlert('Kesalahan', `Gagal menginisialisasi Firebase. Silakan periksa kunci API, atau koneksi internet Anda. Detail: Firebase: error (${error.code})`);
                 connectionStatusEl.textContent = 'Status: Gagal Terhubung';
                 connectionStatusEl.className = 'text-red-500 font-semibold';
             }
